# wain

./: .gitignore  CMakeLists.txt  README.md  common.h  data_section.cpp  data_section.h  element_section.h  export_section.h  global_section.cpp  global_section.h  hell.wasm  import_section.cpp  import_section.h  init.cpp  instruction.cpp  instruction.h  loader.cpp  loader.h  main.cpp  memory.cpp  memory.h  module.cpp  module.h  operator.cpp  operator.h  reader.cpp  reader.h  run.sh  section.cpp  section.h  section_common.h  section_v1.cpp  section_v1.h  type.cpp  type.h  type_section.cpp  type_section.h
hell/: hell.c  hell.js  hell.wasm  hell.wat
src/: main.cpp  module.cpp  module.h  type.cpp  type.h
src/interpreter/: interpreter.cpp  interpreter.h  stack.cpp  stack.h
src/loader/: loader.h
src/memory/: memory.h
src/section/: code_section.cpp  code_section.h  data_section.h  element_section.cpp  element_section.h  export_section.cpp  export_section.h  function_section.cpp  function_section.h  global_section.h  import_section.cpp  import_section.h  init_expr.cpp  init_expr.h  instruction.cpp  instruction.h  memory_section.cpp  memory_section.h  section.h  section_v1.cpp  section_v1.h  table_section.cpp  table_section.h  type_section.cpp  type_section.h
